# Virtual-CarHub

./: .gitignore  FIX_AUTH_AND_TEST.md  Makefile  README.md  SCRAPING_DIAGNOSTICS.md  TEST_SCRAPING_MANUALLY.md  VCH_Image_Processing_Pipeline_Spec_v2.md  VirtualCarHub_PRD_v2.md  WORKFLOW_GAP_ANALYSIS.md  docker-compose.yml  sample_condition_report.html  test_preapproval.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260218_0600_initial_schema.py  20260227_1500_inventory_perf_indexes.py  20260308_1200_ove_backend_support.py  20260310_1400_inventory_taxonomy_cache.py  20260316_1200_add_preapproval_document_tracking.py  20260327_1200_add_evox_vif_and_color_cache.py  20260406_1915_add_vehicle_history_enrichment_cache.py  20260407_1200_ove_detail_request_lease_queue.py  20260408_2100_ove_scraper_heartbeats.py  (+8 more)
backend/app/: __init__.py  main.py
backend/scripts/: migrate_sqlite_to_postgres.py  test_marketcheck_live.py
backend/tests/: conftest.py  test_api_smoke.py  test_chromedata_client.py  test_chromedata_color_resolution.py  test_chromedata_vss_resolution.py  test_condition_report_granular.py  test_ghl_lifecycle_service.py  test_image_pipeline_service.py  test_inventory_api.py  test_marketcheck_history_diagnostic_live.py  test_marketcheck_history_enrichment_service.py  test_nlp_query_service.py  test_object_storage_service.py  test_ove_inventory_api.py  test_s3_service.py  test_surplus_condition_report_images.py  test_vehicle_image_screening_service.py
(+244 files in other folders)
